--- a/buildsome-tst.cabal
+++ b/buildsome-tst.cabal
@@ -16,23 +16,71 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   exposed-modules:     Lib
-  build-depends:       base >= 4.7 && < 5
+  build-depends:       aeson >= 0.8.0.2
+                     , array >= 0.5.1.0
+                     , base >= 4.7 && < 5
+                     , base-compat >= 0.8.2
+                     , binary >= 0.7.5.0
+                     , bytestring >= 0.10.6.0
+                     , containers >= 0.5.6.2
+                     , deepseq >= 1.4.1.1
+                     , deepseq-generics >= 0.1.1.2
+                     , dlist >= 0.7.1.1
+                     , parsec >= 3.1.9
+                     , text >= 1.2.1.3
+                     , time >= 1.5.0.1
+                     , unix >= 2.7.1.0
   default-language:    Haskell2010
 
 executable buildsome-tst-exe
   hs-source-dirs:      app
   main-is:             Main.hs
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
-  build-depends:       base
+  other-modules:       BMake.User
+                     , BMake.Base
+                     , BMake.Parser
+                     , BMake.Lexer
+
+  ghc-options:       -threaded -Wall -O2 -fsimpl-tick-factor=1000 -rtsopts -with-rtsopts=-A16M -fwarn-incomplete-uni-patterns
+  build-depends:       aeson >= 0.8.0.2
+                     , array >= 0.5.1.0
+                     , base
+                     , base-compat >= 0.8.2
+                     , binary >= 0.7.5.0
                      , buildsome-tst
+                     , bytestring >= 0.10.6.0
+                     , containers >= 0.5.6.2
+                     , deepseq >= 1.4.1.1
+                     , deepseq-generics >= 0.1.1.2
+                     , directory
+                     , dlist >= 0.7.1.1
+                     , filepath
+                     , parsec >= 3.1.9
+                     , text >= 1.2.1.3
+                     , time >= 1.5.0.1
+                     , unix >= 2.7.1.0
+                     , yaml
   default-language:    Haskell2010
+  build-tools:         happy, alex
 
 test-suite buildsome-tst-test
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
   main-is:             Spec.hs
-  build-depends:       base
+  build-depends:       aeson >= 0.8.0.2
+                     , array >= 0.5.1.0
+                     , base
+                     , base-compat >= 0.8.2
+                     , binary >= 0.7.5.0
                      , buildsome-tst
+                     , bytestring >= 0.10.6.0
+                     , containers >= 0.5.6.2
+                     , deepseq >= 1.4.1.1
+                     , deepseq-generics >= 0.1.1.2
+                     , dlist >= 0.7.1.1
+                     , parsec >= 3.1.9
+                     , text >= 1.2.1.3
+                     , time >= 1.5.0.1
+                     , unix >= 2.7.1.0
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
