--- a/buildsome-tst.cabal
+++ b/buildsome-tst.cabal
@@ -41,23 +41,23 @@ executable buildsome-tst-exe
                      , BMake.Lexer
 
   ghc-options:       -threaded -Wall -O2 -fsimpl-tick-factor=1000 -rtsopts -with-rtsopts=-A16M -fwarn-incomplete-uni-patterns
-  build-depends:       aeson >= 0.8.0.2
-                     , array >= 0.5.1.0
+  build-depends:       aeson
+                     , array
                      , base
-                     , base-compat >= 0.8.2
-                     , binary >= 0.7.5.0
+                     , base-compat
+                     , binary
                      , buildsome-tst
-                     , bytestring >= 0.10.6.0
-                     , containers >= 0.5.6.2
-                     , deepseq >= 1.4.1.1
-                     , deepseq-generics >= 0.1.1.2
+                     , bytestring
+                     , containers
+                     , deepseq
+                     , deepseq-generics
                      , directory
-                     , dlist >= 0.7.1.1
+                     , dlist
                      , filepath
-                     , parsec >= 3.1.9
-                     , text >= 1.2.1.3
-                     , time >= 1.5.0.1
-                     , unix >= 2.7.1.0
+                     , parsec
+                     , text
+                     , time
+                     , unix
                      , yaml
   default-language:    Haskell2010
   build-tools:         happy, alex
@@ -66,21 +66,21 @@ test-suite buildsome-tst-test
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
   main-is:             Spec.hs
-  build-depends:       aeson >= 0.8.0.2
-                     , array >= 0.5.1.0
+  build-depends:       aeson
+                     , array
                      , base
-                     , base-compat >= 0.8.2
-                     , binary >= 0.7.5.0
+                     , base-compat
+                     , binary
                      , buildsome-tst
-                     , bytestring >= 0.10.6.0
-                     , containers >= 0.5.6.2
-                     , deepseq >= 1.4.1.1
-                     , deepseq-generics >= 0.1.1.2
-                     , dlist >= 0.7.1.1
-                     , parsec >= 3.1.9
-                     , text >= 1.2.1.3
-                     , time >= 1.5.0.1
-                     , unix >= 2.7.1.0
+                     , bytestring
+                     , containers
+                     , deepseq
+                     , deepseq-generics
+                     , dlist
+                     , parsec
+                     , text
+                     , time
+                     , unix
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
