--- a/buildsome-tst.cabal
+++ b/buildsome-tst.cabal
@@ -39,6 +39,7 @@ executable buildsome-tst-exe
                      , BMake.Base
                      , BMake.Parser
                      , BMake.Lexer
+                     , BMake.Interpreter
 
   ghc-options:       -threaded -Wall -O2 -fsimpl-tick-factor=1000 -rtsopts -with-rtsopts=-A16M -fwarn-incomplete-uni-patterns
   build-depends:       aeson
@@ -53,10 +54,12 @@ executable buildsome-tst-exe
                      , deepseq-generics
                      , directory
                      , dlist
+                     , split >= 0.2
                      , filepath
                      , parsec
                      , text
                      , time
+                     , transformers
                      , unix
                      , yaml >= 0.8.13
   default-language:    Haskell2010
