--- a/buildsome-tst.cabal
+++ b/buildsome-tst.cabal
@@ -42,6 +42,7 @@ executable buildsome-tst-exe
                      , BMake.Interpreter
 
   ghc-options:       -threaded -Wall -O2 -fsimpl-tick-factor=1000 -rtsopts -with-rtsopts=-A16M -fwarn-incomplete-uni-patterns
+  ghc-prof-options:  -auto-all -caf-all -rtsopts
   build-depends:       aeson
                      , array
                      , base
