--- a/buildsome-tst.cabal
+++ b/buildsome-tst.cabal
@@ -13,33 +13,17 @@ build-type:          Simple
 -- extra-source-files:
 cabal-version:       >=1.10
 
-library
-  hs-source-dirs:      src
-  exposed-modules:     Lib
-  build-depends:       aeson >= 0.8.0.2
-                     , array >= 0.5.1.0
-                     , base >= 4.7 && < 5
-                     , base-compat >= 0.8.2
-                     , binary >= 0.7.5.0
-                     , bytestring >= 0.10.6.0
-                     , containers >= 0.5.6.2
-                     , deepseq >= 1.4.1.1
-                     , deepseq-generics >= 0.1.1.2
-                     , dlist >= 0.7.1.1
-                     , parsec >= 3.1.9
-                     , text >= 1
-                     , time >= 1.5.0.1
-                     , unix >= 2.7.1.0
-  default-language:    Haskell2010
-
 executable buildsome-tst-exe
-  hs-source-dirs:      app
+  hs-source-dirs:      app, src
   main-is:             Main.hs
   other-modules:       BMake.User
                      , BMake.Base
                      , BMake.Parser
                      , BMake.Lexer
                      , BMake.Interpreter
+                     , Lib.ByteString
+                     , Lib.StringPattern
+                     , Lib.Makefile.Types
 
   ghc-options:       -threaded -Wall -O2 -fsimpl-tick-factor=1000 -rtsopts -with-rtsopts=-A16M -fwarn-incomplete-uni-patterns
   ghc-prof-options:  -auto-all -caf-all -rtsopts
@@ -48,7 +32,6 @@ executable buildsome-tst-exe
                      , base
                      , base-compat
                      , binary
-                     , buildsome-tst
                      , bytestring
                      , containers
                      , deepseq
