Import old Parser code
Have the main program run both the old code and the new code.

--- a/buildsome-tst.cabal
+++ b/buildsome-tst.cabal
@@ -24,6 +24,13 @@ executable buildsome-tst-exe
                      , Lib.ByteString
                      , Lib.StringPattern
                      , Lib.Makefile.Types
+                     , Lib.Cartesian
+                     , Lib.FilePath
+                     , Lib.Makefile.CondState
+                     , Lib.Makefile.MonadClass
+                     , Lib.Makefile.Parser
+                     , Lib.Parsec
+                     , Lib.TimeIt
 
   ghc-options:       -threaded -Wall -O2 -fsimpl-tick-factor=1000 -rtsopts -with-rtsopts=-A16M -fwarn-incomplete-uni-patterns
   ghc-prof-options:  -auto-all -caf-all -rtsopts
