--- a/buildsome-tst.cabal
+++ b/buildsome-tst.cabal
@@ -13,6 +13,10 @@ build-type:          Simple
 -- extra-source-files:
 cabal-version:       >=1.10
 
+Flag Debug
+  Description: Enable debug support
+  Default:     False
+
 executable buildsome-tst-exe
   hs-source-dirs:      app, src
   main-is:             Main.hs
@@ -31,9 +35,14 @@ executable buildsome-tst-exe
                      , Lib.Makefile.Parser
                      , Lib.Parsec
                      , Lib.TimeIt
+ 
+  if flag(debug) {
+    ghc-options:       -threaded -Wall -O0
+  } else {
+    ghc-options:       -threaded -Wall -O2 -fsimpl-tick-factor=1000 -rtsopts -with-rtsopts=-A16M -fwarn-incomplete-uni-patterns
+    ghc-prof-options:  -auto-all -caf-all -rtsopts
+  }
 
-  ghc-options:       -threaded -Wall -O2 -fsimpl-tick-factor=1000 -rtsopts -with-rtsopts=-A16M -fwarn-incomplete-uni-patterns
-  ghc-prof-options:  -auto-all -caf-all -rtsopts
   build-depends:       aeson
                      , array
                      , base
