Report nicer errors from a patched Happy
The patched happy can tell a lot about the token causing the error
and the expected tokens at that place.

--- a/stack.yaml
+++ b/stack.yaml
@@ -1,4 +1,6 @@
 packages:
-- '.'
+- location: https://github.com/da-x/happy/archive/cd790d3ca7cc5816bb3a02227ac31699c35712c0.zip
+  extra-dep: true
+- .
 resolver: lts-5.4
 rebuild-ghc-options: true
