--- a/buildsome-tst.cabal
+++ b/buildsome-tst.cabal
@@ -68,6 +68,7 @@ executable buildsome-tst-exe
                      , transformers
                      , unix
                      , yaml >= 0.8.13
+                     , happy
   default-language:    Haskell2010
   build-tools:         happy, alex
 
